# era5-data-loader

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/_workflows_pending_scope/: ci.yml
src/era5/: __init__.py  cli.py  loader.py
tests/: test_loader.py
